--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,6 +6,7 @@
     "/fonts/glyphicons-halflings-regular.svg": "/fonts/glyphicons-halflings-regular.svg",
     "/fonts/glyphicons-halflings-regular.ttf": "/fonts/glyphicons-halflings-regular.ttf",
     "/fonts/glyphicons-halflings-regular.woff": "/fonts/glyphicons-halflings-regular.woff",
+    "/fonts/glyphicons-halflings-regular.woff2": "/fonts/glyphicons-halflings-regular.woff2",
     "/fonts/glyphicons-halflings-regulard41d.eot": "/fonts/glyphicons-halflings-regulard41d.eot",
     "/fonts/fontawesome-webfont.eot": "/fonts/fontawesome-webfont.eot",
     "/fonts/fontawesome-webfont.svg": "/fonts/fontawesome-webfont.svg",
